--- a/5-git.html
+++ b/5-git.html
@@ -3,6 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<style type="text/css">
+			div{
+				height: 0px;
+				width: 10px;
+			}
+		</style>
 	</head>
 	<body>
 		<div></div>
