--- a/5-git.html
+++ b/5-git.html
@@ -5,16 +5,13 @@
 		<title></title>
 		<style type="text/css">
 			div{
-				height: 0px;
-				width: 10px;
-			}
-			input{
-				display: block;
+				background: yellow;
 			}
 		</style>
 	</head>
 	<body>
 		<div></div>
 		<input type="button" id="" value="" />
+		<p></p>
 	</body>
 </html>
