--- a/5-git.html
+++ b/5-git.html
@@ -5,13 +5,14 @@
 		<title></title>
 		<style type="text/css">
 			div{
-				background: yellow;
+				height: 0px;
+				width: 10px;
 			}
 		</style>
 	</head>
 	<body>
 		<div></div>
 		<input type="button" id="" value="" />
-		<p></p>
+		<div>1</div>
 	</body>
 </html>
